# Twitter-Scraper

./: Auto-Run.sh  Config.json  Get_Version.py  LICENSE  README.md  Run.py  Update.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Core/: Data_Processor.py  Export_Manager.py  Rate_Limiter.py  Twitter_Scraper.py
Logs/: twitterscraper_structured.json
Models/: Tweet_Data.py
Utils/: Anti_Reverse.py  Auth_Manager.py  Code_Protector.py  Config.py  Figlet_Banner.py  Installation_Status.py  License_Manager.py  Logger.py  Terminal_UI.py  Update_Manager.py  Version_Constants.py  Version_Manager.py
